## ---------------------------------------
## tex4ht project using Autoconfig
##
## Changes:
##  2017-05-09  mp  Initial creation
##

AC_INIT([tex4ht], [1.0], [mindaugas.piesina@vtex.lt])

# m4_pattern_allow(AM_INIT_AUTOMAKE)
# m4_pattern_forbid(AM_INIT_AUTOMAKE)
AM_INIT_AUTOMAKE([-Wall -Werror subdir-objects])
# AUTOMAKE_OPTIONS([no-dependencies])

AC_PROG_MAKE_SET

AC_CONFIG_HEADERS([config.h])

# AC_CHECK_FUNCS([floor])
# AC_CHECK_FUNCS([memmove])
# AC_CHECK_FUNCS([memset])
# AC_CHECK_FUNCS([modf])
# AC_CHECK_FUNCS([pow])
# AC_CHECK_FUNCS([select])
# AC_CHECK_FUNCS([sqrt])
# AC_CHECK_FUNCS([strchr])
# AC_CHECK_FUNCS([strdup])
# AC_CHECK_FUNCS([strstr])
AC_CHECK_HEADERS([fcntl.h])
AC_CHECK_HEADERS([limits.h])
# AC_CHECK_HEADERS([memory.h])
# AC_CHECK_HEADERS([stddef.h])
# AC_CHECK_HEADERS([stdint.h])
# AC_CHECK_HEADERS([stdlib.h])
# AC_CHECK_HEADERS([string.h])
AC_CHECK_HEADERS([sys/time.h])
# AC_CHECK_HEADER([unistd.h], break)
AC_CHECK_HEADERS([dirent.h])

AC_C_INLINE
AC_FUNC_ERROR_AT_LINE
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_HEADER_STDBOOL
AC_PREREQ
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MKDIR_P
AC_PROG_RANLIB
AC_TYPE_INT16_T
AC_TYPE_INT32_T
AC_TYPE_INT64_T
AC_TYPE_INT8_T
AC_TYPE_SIZE_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T
AC_TYPE_UINT8_T

# AM_PROG_CC_C_O
AC_PROG_CXX

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
